Tried to allow running from Intellij.  Did not work, will revert