@@ -11,7 +11,21 @@ targetCompatibility = "11"
 
 javafx {
     version = 14
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
+//    sdk = System.getenv('PATH_TO_FX')
+//    if (sdk ==null || sdk.isBlank()) {
+//        throw new InvalidUserDataException("PATH_TO_FX env variable is not set")
+//    }
+    application {
+        def javafxHome = System.getenv("PATH_TO_FX")
+        mainClassName = 'com.nickrexrode.DesktopAssistant'
+        applicationName = 'DesktopAssistant'
+        applicationDefaultJvmArgs = [
+                "--module-path=${javafxHome}",
+                '--add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.fxml'
+        ]
+        println("applicationDefaultJvmArgs:" + applicationDefaultJvmArgs)
+    }
 }
 
 mainClassName = 'com.nickrexrode.DesktopAssistant'
@@ -50,8 +64,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-//    compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
-//    compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
+//    implementation group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
+//    implementation group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
 //    compile group: 'org.jvoicexml', name: 'cmu_us_kal', version: '1.2.3-SNAPSHOT'
 //    compile group: 'org.jvoicexml', name: 'cmu_time_awb', version: '1.2.3-SNAPSHOT'
 
